// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`interface comments and doc-comments inside interface body 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [
        Method {
          "arguments": [],
          "attrGroups": [],
          "body": null,
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "leadingComments": [
            CommentLine {
              "kind": "commentline",
              "offset": 31,
              "value": "// inline comment between members
",
            },
            CommentBlock {
              "kind": "commentblock",
              "offset": 73,
              "value": "/** @return void */",
            },
          ],
          "name": Identifier {
            "kind": "identifier",
            "name": "bar",
          },
          "nullable": false,
          "type": TypeReference {
            "kind": "typereference",
            "name": "void",
            "raw": "void",
          },
          "visibility": "public",
        },
        Method {
          "arguments": [],
          "attrGroups": [],
          "body": null,
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isReadonly": false,
          "isStatic": false,
          "kind": "method",
          "leadingComments": [
            CommentBlock {
              "kind": "commentblock",
              "offset": 138,
              "value": "/* block comment */",
            },
          ],
          "name": Identifier {
            "kind": "identifier",
            "name": "baz",
          },
          "nullable": false,
          "type": TypeReference {
            "kind": "typereference",
            "name": "int",
            "raw": "int",
          },
          "visibility": "public",
        },
      ],
      "extends": null,
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "comments": [
    CommentLine {
      "kind": "commentline",
      "offset": 31,
      "value": "// inline comment between members
",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 73,
      "value": "/** @return void */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 138,
      "value": "/* block comment */",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`interface extends 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [],
      "extends": [
        Name {
          "kind": "name",
          "name": "B",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`interface interface name as identifier 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [],
      "extends": null,
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`interface invalid private flag 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "B",
              },
              "value": Number {
                "kind": "number",
                "value": "1",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [
    Error {
      "expected": [
        195,
        196,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'private' (T_PRIVATE) on line 1",
      "token": "'private' (T_PRIVATE)",
    },
  ],
  "kind": "program",
}
`;

exports[`interface multiple extends 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [],
      "extends": [
        Name {
          "kind": "name",
          "name": "B",
          "resolution": "uqn",
        },
        Name {
          "kind": "name",
          "name": "C",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
